--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,6 +1,5 @@
-title: Minimal theme
-logo: /assets/img/logo.png
+title: Page | JERRY PRO
+logo: ../icon.png
 description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+show_downloads: false
 theme: jekyll-theme-minimal
